samples/_failures_safe/1761454424_074a21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42d46d50.c: In function ‘main’:
./samples/SAFE/__tmp_42d46d50.c:188:17: error: expected expression at end of input
  188 |                 if (len > 0 &&
      |                 ^~
./samples/SAFE/__tmp_42d46d50.c:188:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42d46d50.c:188:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42d46d50.c:188:17: error: expected declaration or statement at end of input
